[14] Added script to extract translations and added missing translation for PL

--- a/frontend/src/translations/general.json
+++ b/frontend/src/translations/general.json
@@ -9,11 +9,163 @@
     "campaign": "Kampania",
     "campaign-year": "Rok kampanii",
     "character": "Bohater",
-    "race": "Rasa"
+    "race": "Rasa",
+    "armour-points": "Punkty zbroi",
+    "head": "Głowa",
+    "right-arm": "Prawa ręka",
+    "left-arm": "Lewa ręka",
+    "body": "Korpus",
+    "right-leg": "Prawa noga",
+    "left-leg": "Lewa noga",
+    "current-career": "Obecna profesja",
+    "previous-careers": "Poprzednia profesja",
+    "combat-movement": "Ruch w walce",
+    "move-disengage": "Ruch/odwrót",
+    "charge-attack": "Szarża",
+    "run": "Bieg",
+    "experience-points": "Punkty doświadczenia",
+    "current": "Obecne",
+    "total": "Razem",
+    "money": "Pieniądze",
+    "gold-crowns": "Złote korony (zk)",
+    "silver-schillings": "Srebrne szylingi (s)",
+    "brass-pennies": "Mosiężne pensy",
+    "personal-details": "Opis bohatera",
+    "age": "Wiek",
+    "gender": "Płeć",
+    "eye-color": "Kolor oczu",
+    "weight": "Waga",
+    "hair-color": "Kolor włosów",
+    "height": "Wzrost",
+    "star-sign": "Znak gwiezdny",
+    "number-of-siblings": "Rodzeństwo",
+    "birthplace": "Miejsce urodzenia",
+    "distinguishing-marks": "Znaki szczególne",
+    "skills": "Umiejętności",
+    "basic-skills": "Podstawowe (Cecha)",
+    "taken": "Wykupione",
+    "related-talents": "Zdolności pokrewne",
+    "advanced-skills": "Zaawansowane",
+    "talents": "Zdolności",
+    "talent": "Zdolność",
+    "description": "Opis",
+    "trappings": "Wyposażenie",
+    "item": "Przedmiot",
+    "weapons": "Broń",
+    "weapons.name": "Nazwa",
+    "weapons.encurbance": "Obc.",
+    "weapons.group": "Kategoria",
+    "weapons.damage": "Siła",
+    "weapons.range": "Zasięg",
+    "weapons.reload": "Przeład.",
+    "weapons.qualities": "Cechy oręża",
+    "advanced-armour": "Opancerzenie złożone",
+    "armour-type": "Typ pancerza",
+    "enc": "Obc.",
+    "locations-covered": "Lokacja ciała",
+    "ap": "PZ",
+    "armour": "Pancerz",
+    "basic-armour": "Opancerzenie proste",
+    "add-row": "Dodaj nowy",
+    "remove-row": "Usuń",
+    "starting": "Początkowa",
+    "advance": "Schemat rozwoju",
+    "character-profile": "Cechy",
+    "main": "Cechy główne",
+    "secondary": "Cechy drugorzędne",
+    "character.data.copied": "Dane postaci skopiowane do schowka",
+    "copy-character-data-to-clipboard": "Skopiuj dane postaci do schowka",
+    "spell-name": "Nazwa czaru",
+    "casting-number": "Wymagany poziom mocy",
+    "casting-time": "Czas rzucania",
+    "ingredient": "Składnik",
+    "spell-grimoire": "Księga zaklęć",
+    "paste-character-data": "Wklej dane postaci poniżej",
+    "open-pasted-character": "Otwórz wklejoną postać"
   },
   "en": {
-    "create-character": "Create a character",
-    "use-existing-character": "Use an existing character",
-    "navigation.home": "Home"
+    "armour-points": "Armour Points",
+    "head": "HEAD",
+    "right-arm": "RIGHT ARM",
+    "left-arm": "LEFT ARM",
+    "body": "BODY",
+    "right-leg": "RIGHT LEG",
+    "left-leg": "LEFT LEG",
+    "character": "Character",
+    "name": "Name",
+    "race": "Race",
+    "current-career": "Current Career",
+    "previous-careers": "Previous Careers",
+    "combat-movement": "Combat Movement",
+    "move-disengage": "Move/Disengage",
+    "charge-attack": "Charge Attack",
+    "run": "Run",
+    "experience-points": "Experience Points",
+    "current": "Current",
+    "total": "Total",
+    "money": "Money",
+    "gold-crowns": "Gold Crowns (gc)",
+    "silver-schillings": "Silver Schillings (s)",
+    "brass-pennies": "Brass Pennies (p)",
+    "personal-details": "Personal Details",
+    "age": "Age",
+    "gender": "Gender",
+    "eye-color": "Eye Color",
+    "weight": "Weight",
+    "hair-color": "Hair Color",
+    "height": "Height",
+    "star-sign": "Star Sign",
+    "number-of-siblings": "Number of Siblings",
+    "birthplace": "Birthplace",
+    "distinguishing-marks": "Distinguishing Marks",
+    "player": "Player",
+    "game-master": "Game Master",
+    "campaign": "Campaign",
+    "campaign-year": "Campaign Year",
+    "skills": "Skills",
+    "basic-skills": "Basic Skills (Characteristic)",
+    "taken": "Taken",
+    "related-talents": "Related Talents",
+    "advanced-skills": "Advanced Skills (Char.)",
+    "talents": "Talents",
+    "talent": "Talent",
+    "description": "Description",
+    "trappings": "Trappings",
+    "item": "Item",
+    "encurbance": "Enc",
+    "weapons": "Weapons",
+    "weapons.name": "Name",
+    "weapons.encurbance": "Enc",
+    "weapons.group": "Group",
+    "weapons.damage": "Damage",
+    "weapons.range": "Range",
+    "weapons.reload": "Reload",
+    "weapons.qualities": "Qualities",
+    "advanced-armour": "Advanced Armour",
+    "armour-type": "Armour Type",
+    "enc": "Enc",
+    "locations-covered": "Locations Covered",
+    "ap": "AP",
+    "armour": "Armour",
+    "basic-armour": "Basic Armour",
+    "add-row": "Add new row",
+    "remove-row": "Remove selected row",
+    "starting": "Starting",
+    "advance": "Advance",
+    "character-profile": "Character Profile",
+    "main": "Main",
+    "secondary": "Secondary",
+    "character.data.copied": "Character data copied to clipboard",
+    "copy-character-data-to-clipboard": "Copy character data to clipboard for later use",
+    "spell-name": "Spell name",
+    "casting-number": "Casting number",
+    "casting-time": "Casting time",
+    "ingredient": "Ingredient",
+    "spell-grimoire": "Spell Grimoire",
+    "navigation.home": "Home",
+    "create-character": "Create character",
+    "use-existing-character": "Use existing character",
+    "paste-character-data": "Paste character data below",
+    "open-pasted-character": "Open pasted character"
   }
 }
